banner title issue on mobile...  again

--- a/css/style.css
+++ b/css/style.css
@@ -1641,7 +1641,7 @@ a {
 
   .banner-title {
     width: 100%;
-    padding: 80px 30px 0 30px;
+    padding: 100px 30px 0 30px;
   }
 
   .banner-text-wrap .faux-table {
